# product-recommender-system

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Containerfile  README.md  compose.yaml  feature_store.yaml  package-lock.json  pyproject.toml
.github/workflows/: build-and-push.yml  build-and-test.yml  pr-checks.yml  test.yml
backend/: .containerignore  .env.local  .gitignore  Containerfile  README.md  config.py  create_tables.py  db.py  feast_service.py  feature_store.yaml  init_backend.py  kafka_service.py  main.py  models.py  pyproject-dev.toml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/config/: test_users.yaml
backend/database/: create_tables.py  db.py  fetch_feast_users.py  models_sql.py  setup_all.py
backend/routes/: auth.py  cart.py  feedback.py  health.py  interactions.py  orders.py  preferences.py  products.py  recommendations.py  wishlist.py
backend/services/: feast_service.py  kafka_service.py  security.py
backend/services/feast/: feast_service.py  feature_store.yaml
backend/services/feast/data/: recommendation_items.parquet  recommendation_users.parquet
backend/services/feast/tmp_data/: recommendation_interactions.parquet
backend/tests/routes/: conftest.py  health_test.py
env/: local.env  tests.env
frontend/: .prettierignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  types.d.ts
frontend/src/components/: App.tsx  Gallery.tsx  account-page.tsx  app-masthead.tsx  cart-dropdown.tsx  cart-icon.tsx  catalog-page.tsx  faker-products.tsx  gallery-skeleton.tsx  landing-page.tsx  login.tsx  masthead.tsx  preferences.tsx  product-card-skeleton.tsx  product-card.tsx  product-details.tsx  public-masthead.tsx  search-page.tsx  search-results-page.tsx  search.tsx  signup.tsx  skeleton-demo.tsx  user-dropdown.tsx  wishlist.tsx
frontend/src/config/: api.tsx
frontend/src/contexts/: AuthProvider.tsx  README.md
frontend/src/hooks/: README.md  index.ts  useAuth.ts  useCart.ts  useComposite.ts  useFeedback.ts  useInteractions.ts  useOptimistic.ts  useOrders.ts  usePreferences.ts  useProducts.ts  useRecommendations.ts  useWishlist.ts
frontend/src/routes/: __root.tsx  account.tsx  catalog.tsx  index.tsx  login.tsx  search.tsx  signup.tsx
frontend/src/services/: README.md  api.ts  auth.ts  auth.tsx  cart.ts  feedback.ts  index.ts  interactions.ts  orders.ts  preferences.ts  products.ts  products.tsx  recommendations.ts  wishlist.ts
helm/: Makefile  README.md
helm/minio/: Chart.yaml  values.yaml
helm/minio/templates/: config-map.yaml  (+6 more)
helm/pipeline-server/: Chart.yaml  values.yaml
helm/product-recommender-system/: Chart.yaml  values.yaml
scripts/: pre-push-commit-limit.sh
tests/: README.md
tests/integration/: __init__.py  run_integration_tests.sh  test_auth_edge_cases.tavern.yaml  test_authorization.tavern.yaml  test_cart.tavern.yaml  test_endpoints.tavern.yaml  test_product_recommendations.tavern.yaml  test_user_preferences_edge_cases.tavern.yaml  test_user_search.tavern.yaml  test_user_signup_and_signin.tavern.yaml  tests_helpers.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.jsx  Dashboard.css  Dashboard.jsx  Login.css  Login.jsx  NavBar.css  NavBar.jsx  Preferences.css  Preferences.jsx  ProductDetail.css  ProductDetail.jsx  SearchPage.css  SearchPage.jsx  index.css
(+27 files in other folders)
